Starting on UI for project size indicator

--- a/src/extensions/default/bramble/stylesheets/sidebarTheme.less
+++ b/src/extensions/default/bramble/stylesheets/sidebarTheme.less
@@ -33,6 +33,40 @@ div.working-set-option-btn[style] {
     font-family: "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+#project-size-info {
+    padding: 12px 10px;
+    background: rgba(0,0,0,.9);
+
+    .space-available {
+        background: rgba(255,255,255,.2);
+        position: relative;
+        height: 6px;
+        margin-bottom: 6px;
+        border-radius: 2px;
+    }
+
+    .space-used-bar {
+        border-radius: 2px;
+        width: 60%;
+        background: rgba(27,134,78,.7);
+        height: 100%;
+        position: absolute;
+        left: 0;
+    }
+
+    .space-used-summary {
+        color: rgba(255,255,255,.4);
+        font-family: "Open Sans";
+        margin: 0;
+
+        strong {
+            font-weight: 600;
+            color: inherit;
+            color: rgba(255,255,255,.5);
+        }
+    }
+}
+
 #project-files-container ul {
     padding: 0 !important;
 }
