--- a/src/extensions/extra/brackets-fonts-viewer/styles/main.less
+++ b/src/extensions/extra/brackets-fonts-viewer/styles/main.less
@@ -4,40 +4,133 @@
     right: 0;
     bottom: 0;
     left: 0;
-    text-align: center;
-}
-.font-holder:before {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-    margin-right: -0.25em;
-}
-.font-centering {
-    display: inline-block;
-    vertical-align: middle;
-    width: 70%;
-}
-.font-header {
     text-align: left;
-}
-.font-data {
-    font-weight: 600;
+    user-select: text;
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 15px;
+    overflow: auto;
 }
 
+.font-centering {
+    padding: 20px 25px;
+}
+
+.font-header {
+    text-align: left;
+
+    .divider {
+        margin: 0 5px;
+    }
+}
+
+.code-wrapper {
+     background: rgba(0,0,0,.1);
+     background: #e3f4fd;
+     text-align: left;
+     margin: 20px 0 30px 0;
+     border: solid 1px #c1dfef;
+
+     .code-title {
+         margin: 0;
+         padding: 18px 18px;
+         line-height: 16px;
+         font-weight: 400;
+         // border-bottom: solid 1px #c1dfef;
+         color: rgba(0,0,0,.7);
+         font-weight: 600;
+         font-size: 15px;
+         background: #c1dfef;
+     }
+
+     pre {
+         font-size: 13px;
+         user-select: text;
+         line-height: 140%;
+         border-radius: 2px;
+         padding: 16px 18px;
+         border: none;
+         color: rgba(0,0,0,.7);
+         background: transparent;
+         margin: 0;
+         display: block;
+         text-align: left;
+    }
+}
+
+
 .font-display {
-    margin: 20px 0;
-    font-size: 2vmax;
+    border-top: solid 1px rgba(0,0,0,.2);
+    padding-top: 20px;
+    margin: 10px 0 25px 0;
     font-family: "FontDisplay";
-    line-height: 1.2em;
+    font-size: 2em;
+    line-height: 1.35em;
     cursor: text;
     overflow-wrap: break-word;
     word-wrap: break-word;
     hyphens: auto;
+    color: rgba(0,0,0,.7)
 }
 
-.font-samples p {
-    margin: 20px 0;
+.font-samples {
+    h3 {
+        font-size: 15px;
+        font-weight: 600;
+        margin: 0 0 2px 0;
+        padding: 0;
+        line-height: 18px;
+        font-weight: 600;
+    }
+
+    ul {
+        margin: 0;
+        list-style-type: none;
+        background: #e3f4fd;
+        margin: 15px 0 10px 0;
+        border: solid 1px #c1dfef;
+
+        li {
+            font-size: 14px;
+            padding: 16px 18px;
+            color: rgba(0,0,0,.7);
+            border-bottom: solid 1px #c1dfef;
+
+            strong {
+                font-weight: 600;
+                color: rgba(0,0,0,.9);
+            }
+
+            &:last-child {
+                margin: 0;
+                border: none;
+            }
+
+            code {
+                font-size: 13px;
+                color: #0984b7;
+                margin: 0;
+                padding: 0;
+            }
+        }
+    }
+
+    p {
+        font-size: 1.5em;
+        line-height: 1.5em;
+        margin: 0;
+        font-family: "FontDisplay";
+        color: rgba(0,0,0,.6);
+    }
+}
+
+.font-samples .sample {
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    border-bottom: solid 1px rgba(0,0,0,.2);
+
+    &:last-child {
+        border: none;
+    }
 }
 
 .font-samples .normal {
